// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Utilization /> renders correctly 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title"
    >
      Cluster Utilization
    </h2>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-utilization__items"
    >
      <div
        class="kubevirt-utilization__item-narrow"
      >
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-title col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            CPU
          </div>
          <div
            class="kubevirt-utilization__item-actual item-actual--narrow col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            50 %
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-chart"
          >
            <div
              class=" chart-pf-sparkline"
            />
          </div>
        </div>
      </div>
      <div
        class="kubevirt-utilization__item-narrow"
      >
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-title col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            Memory
          </div>
          <div
            class="kubevirt-utilization__item-actual item-actual--narrow col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            30 Ki
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-chart"
          >
            <div
              class=" chart-pf-sparkline"
            />
          </div>
        </div>
      </div>
      <div
        class="kubevirt-utilization__item-narrow"
      >
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-title col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            Disk Usage
          </div>
          <div
            class="kubevirt-utilization__item-actual item-actual--narrow col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            5 Ki
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-chart"
          >
            <div
              class=" chart-pf-sparkline"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Utilization /> renders correctly in Loading state 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title"
    >
      Cluster Utilization
    </h2>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-utilization__items"
    >
      <div
        class="kubevirt-utilization__item-narrow"
      >
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-title col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            CPU
          </div>
          <div
            class="kubevirt-utilization__item-actual item-actual--narrow col-lg-6 col-md-6 col-sm-6 col-xs-6"
          />
        </div>
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-chart"
          >
            <div>
              <div
                class="spinner spinner-md blank-slate-pf-icon"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="kubevirt-utilization__item-narrow"
      >
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-title col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            Memory
          </div>
          <div
            class="kubevirt-utilization__item-actual item-actual--narrow col-lg-6 col-md-6 col-sm-6 col-xs-6"
          />
        </div>
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-chart"
          >
            <div>
              <div
                class="spinner spinner-md blank-slate-pf-icon"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="kubevirt-utilization__item-narrow"
      >
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-title col-lg-6 col-md-6 col-sm-6 col-xs-6"
          >
            Disk Usage
          </div>
          <div
            class="kubevirt-utilization__item-actual item-actual--narrow col-lg-6 col-md-6 col-sm-6 col-xs-6"
          />
        </div>
        <div
          class="row"
        >
          <div
            class="kubevirt-utilization__item-narrow-chart"
          >
            <div>
              <div
                class="spinner spinner-md blank-slate-pf-icon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
